Fix top scroll overlap UI bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,13 @@
 }
 
 /* Common */
+.app-container {
+    height: 100vh;
+}
+
 .app-body {
-    height: calc(100vh - var(--header-footer-height));
+    margin-top: var(--header-footer-height);
+    height: calc(100vh - (2 * var(--header-footer-height)));
     overflow-x: hidden;
 }
 
@@ -17,7 +22,6 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding-top: var(--header-footer-height);
 }
 
 .container .container-block {
@@ -90,6 +94,15 @@
     justify-content: space-between;
     align-items: center;
     position: fixed;
+}
+
+.header-footer.navbar {
+    margin: 0px auto;
+    text-align: center;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
 }
 
 .header-footer ul {
